Fix notification click.

In https://crrev.com/c/962556, MessageView started to use
OnMouseReleased for detecting notification click. OnMouseReleased
requires OnMousePressed and OnMouseDragged to return true in order to
receive events. However, they are only overridden in NotificationViewMD,
thus NotificationView's click event is broken.

TEST=manual
BUG=824789

Change-Id: Ie4e0c803ddf8425eebaad30c927c356bab699b69
Reviewed-on: https://chromium-review.googlesource.com/981873
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546064}
Former-commit-id: bc09d4d561afd7ab8257f4ba875e2990cfc1d40c