ui/message_center/views/message_view.h
@@ -81,6 +81,8 @@ class MESSAGE_CENTER_EXPORT MessageView : public views::InkDropHostView,
 
   // views::View
   void GetAccessibleNodeData(ui::AXNodeData* node_data) override;
+  bool OnMousePressed(const ui::MouseEvent& event) override;
+  bool OnMouseDragged(const ui::MouseEvent& event) override;
   void OnMouseReleased(const ui::MouseEvent& event) override;
   bool OnKeyPressed(const ui::KeyEvent& event) override;
   bool OnKeyReleased(const ui::KeyEvent& event) override;
